# FaceLockIO

./: .gitignore  CMakeLists.txt
docs/: .architecture.d.swp  architecture.md
include/vision/camera/: CameraManager.hpp
include/vision/detector/: FaceDetector.hpp
src/: CMakeLists.txt
src/core/: camera_preview.cpp  camera_test.cpp  main.cpp
src/vision/camera/: CameraManager.cpp
